<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!-- Here you put the rest of your current view-->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">
        <CheckBox
                android:text="@string/js"
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/jsCheck"
                app:layout_constraintTop_toBottomOf="@+id/javaCheck"
                android:layout_marginTop="16dp" app:layout_constraintStart_toEndOf="@+id/lenguajeLabel"
                android:layout_marginStart="96dp"/>
        <CheckBox
                android:text="@string/c"
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/cCheck"
                app:layout_constraintTop_toBottomOf="@+id/jsCheck"
                android:layout_marginTop="16dp" app:layout_constraintStart_toEndOf="@+id/lenguajeLabel"
                android:layout_marginStart="96dp"/>
        <CheckBox
                android:text="@string/csharp"
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/csharpCheck"
                app:layout_constraintTop_toBottomOf="@+id/goCheck"
                android:layout_marginTop="16dp" app:layout_constraintStart_toEndOf="@+id/cCheck"
                android:layout_marginStart="32dp"/>
        <CheckBox
                android:text="@string/java"
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/javaCheck"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                android:layout_marginTop="16dp" app:layout_constraintStart_toEndOf="@+id/lenguajeLabel"
                android:layout_marginStart="96dp"/>
        <CheckBox
                android:text="@string/python"
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/pythonCheck"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                android:layout_marginTop="16dp" app:layout_constraintStart_toEndOf="@+id/javaCheck"
                android:layout_marginStart="44dp"/>
        <CheckBox
                android:text="@string/go"
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/goCheck"
                app:layout_constraintTop_toBottomOf="@+id/pythonCheck"
                android:layout_marginTop="16dp" app:layout_constraintStart_toEndOf="@+id/jsCheck"
                android:layout_marginStart="52dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/nombreTextField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/hintNombre"
                android:textAlignment="center" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/apellidoTextField"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nombreTextField" android:hint="@string/hintapellido"
                android:textAlignment="center" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="24dp" android:id="@+id/genderComboBox"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/genderLabel" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/apellidoTextField" android:textAlignment="center"/>
        <TextView
                android:text="@string/genero"
                android:layout_width="0dp"
                android:layout_height="19dp" android:id="@+id/genderLabel"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/apellidoTextField"
                android:textAlignment="center" android:textSize="14dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>
        <TextView
                android:text="@string/fechaNaci"
                android:layout_width="0dp"
                android:layout_height="36dp" android:id="@+id/fechaNaciLabel"
                android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/genderLabel"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:textAlignment="center" android:textSize="14dp"/>
        <TextView
                android:text="@string/programar"
                android:layout_width="0dp"
                android:layout_height="36dp" android:id="@+id/programarLabel"
                android:textAlignment="center" android:textSize="14dp"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/fechaNaciSPN" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>
        <TextView
                android:text="@string/lenguaje"
                android:layout_width="0dp"
                android:layout_height="44dp" android:id="@+id/lenguajeLabel"
                android:textAlignment="center" android:textSize="14dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/programarLabel" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>
        <DatePicker
                android:id="@+id/fechaNaciSPN"
                android:layout_width="0dp"
                android:layout_height="212dp"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/genderComboBox" android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@+id/fechaNaciLabel" android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.166"/>
        <RadioGroup
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_marginTop="19dp"
                app:layout_constraintTop_toBottomOf="@+id/fechaNaciSPN" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/programarLabel"
                android:layout_marginStart="16dp" android:id="@+id/radioGroup">
            <RadioButton android:id="@+id/yesRDBTN"
                         android:layout_width="105dp"
                         android:layout_height="wrap_content"
                         android:text="@string/si"
                         android:onClick="onRadioButtonClicked"
            />
            <RadioButton android:id="@+id/noRDBTN"
                         android:layout_width="104dp"
                         android:layout_height="match_parent"
                         android:text="@string/no"
                         android:onClick="onRadioButtonClicked"
            />
        </RadioGroup>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="49dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="12dp"
                android:layout_marginStart="24dp" android:id="@+id/linearLayout" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/cCheck">
            <Button
                    android:text="@string/clear"
                    android:layout_width="141dp"
                    android:layout_height="match_parent" android:id="@+id/clearBTN"
                    android:layout_marginBottom="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="0dp"
                    android:backgroundTint="@color/danger"
                    android:onClick="limpiar"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="48dp" android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="12dp"
                android:orientation="vertical"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/cCheck">
            <Button
                    android:text="@string/send"
                    android:layout_width="141dp"
                    android:layout_height="match_parent" android:id="@+id/sendBTN"
                    android:onClick="sendInfo"
            />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
